fixed top charities slider overflow w/ new positioning

--- a/client/src/components/TopCharitiesSlider/styles.scss
+++ b/client/src/components/TopCharitiesSlider/styles.scss
@@ -1,7 +1,7 @@
 @import '../../variables.scss';
 
 .top-charities-slider-wrapper {
-  width: 100vw;
+  width: 100%;
 }
 
 ::-webkit-scrollbar {
